<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/navigation_social"
        android:icon="@drawable/ic_social_black_24dp"
        android:title="@string/title_social" />

    <item
        android:id="@+id/navigation_buscar"
        android:icon="@drawable/ic_buscar_black_24dp"
        android:title="@string/title_buscar" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_estadisticas"
        android:title="Estadísticas" />

    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_perfil_black_24dp"
        android:title="@string/title_perfil" />
</menu>