<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <!-- Home y otros (Sin cambios) -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.sportine.ui.usuarios.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_alumno_home" >
        <action
            android:id="@+id/action_home_to_detalles"
            app:destination="@+id/detallesEntrenamientoFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.sportine.ui.usuarios.social.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_alumno_notifications" />

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.example.sportine.ui.usuarios.estadisticas.EstadisticasFragment"
        android:label="Estadisticas"
        tools:layout="@layout/fragment_alumno_estadisticas" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.example.sportine.ui.usuarios.perfil.PerfilFragment"
        android:label="Perfil"
        tools:layout="@layout/fragment_alumno_perfil" >
        <action
            android:id="@+id/action_perfil_to_configuracion"
            app:destination="@id/navigation_configuracion"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"/>
        <action
            android:id="@+id/action_perfil_to_completar_datos"
            app:destination="@id/navigation_completar_datos_usuario" />
    </fragment>

    <fragment
        android:id="@+id/navigation_configuracion"
        android:name="com.example.sportine.ui.usuarios.configuracion.ConfiguracionFragment"
        android:label="Configuración"
        tools:layout="@layout/fragment_alumno_configuracion">
        <action
            android:id="@+id/action_configuracion_to_modificar"
            app:destination="@id/navigation_modificar_datos"/>
        <action
            android:id="@+id/action_configuracion_to_editar_tarjeta"
            app:destination="@id/navigation_editar_tarjeta"/>
        <action
            android:id="@+id/action_configuracion_to_agregar_pago"
            app:destination="@id/navigation_agregar_forma_pago"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_modificar_datos"
        android:name="com.example.sportine.ui.usuarios.modificardatosalumno.ModificarDatosAlumnoFragment"
        android:label="Modificar Datos"
        tools:layout="@layout/fragment_alumno_modificar_datos"/>

    <fragment
        android:id="@+id/navigation_editar_tarjeta"
        android:name="com.example.sportine.ui.usuarios.editartarjeta.EditarTarjetaFragment"
        android:label="Editar Tarjeta"
        tools:layout="@layout/fragment_alumno_editar_tarjeta">
    </fragment>

    <fragment
        android:id="@+id/navigation_agregar_forma_pago"
        android:name="com.example.sportine.ui.usuarios.agregarformapago.AgregarformapagoFragment"
        android:label="Agregar Forma de Pago"
        tools:layout="@layout/fragment_alumno_agregar_forma_pago"/>

    <fragment
        android:id="@+id/navigation_completar_datos_usuario"
        android:name="com.example.sportine.ui.usuarios.completardatosusuario.CompletardatosusuarioFragment"
        android:label="Completar Datos"
        tools:layout="@layout/fragment_alumno_completar_datos" />


    <!-- FRAGMENT SOCIAL (AQUÍ ESTÁ LA MAGIA) -->
    <fragment
        android:id="@+id/navigation_social"
        android:name="com.example.sportine.ui.usuarios.social.SocialFragment"
        android:label="@string/title_social"
        tools:layout="@layout/fragment_alumno_social" >

        <action
            android:id="@+id/action_social_to_buscar_amigo"
            app:destination="@id/navigation_buscar_amigo"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>

        <action
            android:id="@+id/action_social_to_lista_amigos"
            app:destination="@id/navigation_lista_amigos"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>

        <!-- ACCIÓN DE TRANSICIÓN AL DETALLE -->
        <action
            android:id="@+id/action_social_to_detallePost"
            app:destination="@id/navigation_detallePost" />
    </fragment>

    <fragment
        android:id="@+id/navigation_buscar_amigo"
        android:name="com.example.sportine.ui.usuarios.social.BuscarAmigoFragment"
        android:label="Buscar Amigo"
        tools:layout="@layout/fragment_alumno_buscar_amigo" />

    <fragment
        android:id="@+id/navigation_lista_amigos"
        android:name="com.example.sportine.ui.usuarios.social.ListaAmigosFragment"
        android:label="Mis Amigos"
        tools:layout="@layout/fragment_alumno_lista_amigos" />

    <!-- DESTINO DETALLE -->
    <fragment
        android:id="@+id/navigation_detallePost"
        android:name="com.example.sportine.ui.usuarios.social.DetallePostFragment"
        android:label="Detalle"
        tools:layout="@layout/fragment_detalle_post" />


    <fragment
        android:id="@+id/navigation_buscar"
        android:name="com.example.sportine.ui.usuarios.buscar.BuscarFragment"
        android:label="Buscar"
        tools:layout="@layout/fragment_alumno_buscar">
        <action
            android:id="@+id/action_buscar_to_detallesEntrenador"
            app:destination="@id/navigation_detallesEntrenador" />
        <action
            android:id="@+id/action_navigation_buscar_to_solicitudesEnviadas"
            app:destination="@id/solicitudesEnviadas" />
    </fragment>

    <fragment
        android:id="@+id/navigation_detallesEntrenador"
        android:name="com.example.sportine.ui.usuarios.detallesEntrenador.DetallesEntrenadorFragment"
        android:label="detallesEntrenador"
        tools:layout="@layout/fragment_alumno_ver_detalles_entrenador" >
        <action
            android:id="@+id/action_navigation_detallesEntrenador_to_enviarSolicitud"
            app:destination="@id/enviarSolicitud" />
        <action
            android:id="@+id/action_navigation_detallesEntrenador_to_calificarEntrenador"
            app:destination="@id/calificarEntrenador" />
    </fragment>

    <fragment
        android:id="@+id/detallesEntrenamientoFragment"
        android:name="com.example.sportine.ui.usuarios.detallesentrenamiento.DetallesEntrenamientoFragment"
        android:label="Detalles Entrenamiento"
        tools:layout="@layout/fragment_alumno_detalles_entrenamiento" />
    <fragment
        android:id="@+id/enviarSolicitud"
        android:name="com.example.sportine.ui.usuarios.enviarsolicitud.EnviarSolicitud"
        android:label="EnviarSolicitud" />
    <fragment
        android:id="@+id/solicitudesEnviadas"
        android:name="com.example.sportine.ui.usuarios.solicitudesenviadas.SolicitudesEnviadas"
        android:label="fragment_solicitudes_enviadas"
        tools:layout="@layout/fragment_solicitudes_enviadas" >
        <action
            android:id="@+id/action_solicitudesEnviadas_to_navigation_detallesEntrenador"
            app:destination="@id/navigation_detallesEntrenador" />
    </fragment>
    <fragment
        android:id="@+id/calificarEntrenador"
        android:name="com.example.sportine.ui.usuarios.calificarentre.CalificarEntrenador"
        android:label="fragment_calificar_entrenador"
        tools:layout="@layout/fragment_calificar_entrenador" />
    <fragment
        android:id="@+id/navigation_stats_entrenador"
        android:name="com.example.sportine.ui.entrenadores.estadisticas.EstadisticasEntrenadorFragment"
        android:label="Estadísticas"
        tools:layout="@layout/fragment_entrenador_estadisticas" />

</navigation>